# singer_rs

./: Cargo.toml  LICENSE-MIT  README.md
src/: external.rs  lib.rs  tap.rs  target.rs
